# Os_Labs_New

./: Курсовой проект.docx  Лабораторная работа №1.docx  Лабораторная работа №2.docx  Лабораторная работа №3.docx  Лабораторная работа №3:8.docx  Лабораторная работа №4.docx  Лабораторная работа №5-7.docx
cp/: Board.cpp  Board.h  CMakeLists.txt  GameRoom.cpp  GameRoom.h  client.cpp  server.cpp
cp/tests/: tests.cpp
lab-1/: CMakeLists.txt  main.cpp
lab-1/include/: child.hpp  parent.hpp  utils.hpp
lab-1/src/: child.cpp  parent.cpp  utils.cpp
lab-1/tests/: tests.cpp
lab-2/: CMakeLists.txt  main.cpp
lab-2/include/: my_solution.h
lab-2/src/: my_solution.cpp
lab-2/tests/: test.cpp
lab-3/: CMakeLists.txt  main.cpp
lab-3/include/: child.hpp  parent.hpp  utils.hpp
lab-3/src/: child.cpp  parent.cpp  utils.cpp
lab-3/tests/: tests.cpp
lab-4/: .gitignore  CMakeLists.txt  e_formula.cpp  e_series.cpp  prime_naive.cpp  prime_sieve.cpp  test_dynamic.cpp  test_static.cpp  unit_tests.cpp
lab5-7/tests/: test_main.cpp
